--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,7 +1,7 @@
 <!-- Heading -->
 <h3 class="mb-2 mb-sm-0 pt-1 pb-2">
-    <span>Manage Clients</span>
-  </h3>
+  <span>Manage Clients</span>
+</h3>
 <!-- Heading -->
 <div class="alert alert-danger" role="alert" *ngIf="error">
   {{errorMessage}}
@@ -12,7 +12,7 @@
 <div class="row">
   <div class="col-md-4">
     <div class="card">
-      <div class="card-header grey lighten-4" >
+      <div class="card-header grey lighten-4">
         <div class="md-form input-group mb-3">
           <input type="text" class="form-control" id="search" (input)="onSearchChange($event.target.value)" />
           <label for="search">Search</label>
@@ -100,14 +100,14 @@
               </div>
               <div class="md-form ">
                 <label for="pan" [class.active]="client.pan!=''">PAN *</label>
-                <input type="text" class="form-control underlined" name="pan" id="pan" pattern="[A-Za-z]{5}\d{4}[A-Za-z]{1}" title="min 10 characters" required="true"
-                  [(ngModel)]="client.pan" />
+                <input type="text" class="form-control underlined" name="pan" id="pan" pattern="[A-Za-z]{5}\d{4}[A-Za-z]{1}" title="min 10 characters"
+                  required="true" [(ngModel)]="client.pan" />
                 <small>AAAAA1111A</small>
               </div>
               <div class="md-form ">
                 <label for="gstin" [class.active]="client.gstin!=''">GSTIN * </label>
-                <input type="text" class="form-control underlined" name="gstin" id="gstin" pattern="^([0]{1}[1-9]{1}|[1-2]{1}[0-9]{1}|[3]{1}[0-7]{1})([a-zA-Z]{5}[0-9]{4}[a-zA-Z]{1}[1-9a-zA-Z]{1}[zZ]{1}[0-9a-zA-Z]{1})+$" title="min 15,max 20 characters"
-                  required="true" [(ngModel)]="client.gstin" />
+                <input type="text" class="form-control underlined" name="gstin" id="gstin" pattern="^([0]{1}[1-9]{1}|[1-2]{1}[0-9]{1}|[3]{1}[0-7]{1})([a-zA-Z]{5}[0-9]{4}[a-zA-Z]{1}[1-9a-zA-Z]{1}[zZ]{1}[0-9a-zA-Z]{1})+$"
+                  title="min 15,max 20 characters" required="true" [(ngModel)]="client.gstin" />
                 <small>sample : 24AAACB5343E1Z7</small>
               </div>
               <div class="md-form ">
@@ -133,17 +133,27 @@
                 />
               </div>
               <div class="md-form ">
-                <label for="city" [class.active]="client.city!=''">City *</label>
-                <input type="text" class="form-control underlined" name="city" pattern=".{3,}" title="min 3 characters" id="city" required="true"
-                  [(ngModel)]="client.city" />
-                <small>min 3 characters</small>
-              </div>
-              <div class="md-form ">
                 <label for="state" [class.active]="client.state!=''">State *</label>
-                <input type="text" class="form-control underlined" name="state" pattern=".{2,}" title="min 2 characters" id="state" required="true"
-                  [(ngModel)]="client.state" />
-                <small>min 2 characters</small>
+                <!--<input type="text" class="form-control underlined" name="state" pattern=".{2,}" title="min 2 characters" id="state" required="true"
+                      [(ngModel)]="client.state" />-->
+                <select [ngModelOptions]="{standalone: true}" (change)="loadSelectedStates()" class="form-control underlined" [(ngModel)]="selectedStateName">
+                <option></option>
+                <option *ngFor="let state of states" [ngValue]="state.state" [selected]="state.state === selectedStateName">{{state.state}}</option>
+                </select>
               </div>
+              <label for="stateCode" [class.active]="true">State Code: {{selectedStateCode}}</label>
+
+              <div class="md-form ">
+                <label for="city" [class.active]="client.city!=''">City *</label>
+                <!--<input type="text" class="form-control underlined" name="city" pattern=".{3,}" title="min 3 characters" id="city" required="true"
+                  [(ngModel)]="client.city" />-->
+                   <select [ngModelOptions]="{standalone: true}" class="form-control underlined" [(ngModel)]="selectedCity">
+                      <option></option>
+                      <option *ngFor="let district of selectedStateDistricts" [ngValue]="district" [selected]="district === selectedCity">{{district}}</option>
+                    </select>
+                     
+              </div>
+
               <div class="md-form ">
                 <label for="pinCode" [class.active]="client.pincode!=''">PinCode *</label>
                 <input type="text" class="form-control underlined" pattern=".{6,6}" title="min 6,max 6 characters" name="pincode" id="pincode"
@@ -188,12 +198,12 @@
                   id="shipToAddrPincode" required="true" [(ngModel)]="client.shipToAddrPincode" />
                 <small>6 characters</small>
               </div> -->
-              
+
 
             </div>
           </div>
         </div>
-        <div class="card-footer" >
+        <div class="card-footer">
           <button type="submit" class="btn bg-primary float-right"><i class="fa fa-save"></i>&nbsp;Save Client</button>
         </div>
       </div>
