modification for fix

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,5 +15,5 @@
 					</a>
         </div>
         <div class="profile-usertitle-job ">
-         |<span *ngFor="let role of userRole">{{role.roleCode}}|</span>
+          <div *ngFor="let role of userRole">{{role.roleCode}}</div>
         </div>
