Issue 22 Client management screen changes

--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -55,6 +55,7 @@
                   title="3 characters minimum" />
                 <small>minimum 3 character</small>
               </div>
+              
               <div class="md-form ">
                 <label for="contactPerson" [class.active]="client.contactPerson!=''">Contact Person *</label>
                 <input type="text" class="form-control underlined" name="contactPerson" id="contactPerson" required="true" [(ngModel)]="client.contactPerson"
@@ -62,7 +63,7 @@
                 <small>minimum 3 character</small>
               </div>
               <div class=" md-form ">
-                <label for="status" [class.active]="client.status!=''">Company Status *</label>
+                <label for="status" [class.active]="client.status!=''">Status *</label>
                 <select id="status" name="status" class="browser-default custom-select md-select" required="true" [(ngModel)]="client.status">
                   <option value="Artificial_Juridical_person">Artificial Juridical person</option>
                   <option value="Association_of_persons">Association of persons</option>
@@ -102,7 +103,7 @@
                 <label for="pan" [class.active]="client.pan!=''">PAN *</label>
                 <input type="text" class="form-control underlined" name="pan" id="pan" pattern="[A-Za-z]{5}\d{4}[A-Za-z]{1}" title="min 10 characters"
                   required="true" [(ngModel)]="client.pan" />
-                <small>AAAAA1111A</small>
+                <small>sample : AAAAA1111A</small>
               </div>
               <div class="md-form ">
                 <label for="gstin" [class.active]="client.gstin!=''">GSTIN * </label>
