--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -28,7 +28,10 @@
             <i class="fas fa-money-bill-wave-alt mr-1"></i>New Service ProformA</a>
           <a routerLink="/invoiceManu/0" class="waves-effect dropdown-item" *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}">
             <i class="fas fa-money-bill-wave mr-1"></i>New Manufacturing ProformA</a>
-          <a *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}" routerLink="/invoice-search" lass="waves-effect dropdown-item"><i class="fa fa-search mr-1"></i>Search</a>
+          <a routerLink="/bulkUpload" class="waves-effect dropdown-item" *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}">
+            <i class="fas fa-upload mr-1"></i>Invoice Upload</a>
+          <a *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}" routerLink="/invoice-search" lass="waves-effect dropdown-item">
+            <i class="fa fa-search mr-1"></i>Search</a>
         </div>
       </li>
       <li class="nav-item dropdown" *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}">
