--- a/src/app/manufacturing-invoice/invoice.manu.component.html
+++ b/src/app/manufacturing-invoice/invoice.manu.component.html
@@ -45,9 +45,9 @@
         <br/> {{selectedClient.city}}, {{selectedClient.state}},
         <br/> {{selectedClient.pincode}}.
         <br/>
-        <i>Phone : </i> {{selectedClient.phonePrimary}}.
+        <i>Phone : </i> {{selectedClient.phonePrimary}}
         <br/>
-        <i>Email : </i> {{selectedClient.email}}.
+        <i>Email : </i> {{selectedClient.email}}
         <br/>
       </div>
     </div>
