--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -81,6 +81,10 @@
           <div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-1">
               <a class="dropdown-item waves-effect waves-light" href="/">Switch Company?</a>
           </div>
+          <div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-1">
+            <a class="dropdown-item waves-effect waves-light" href="/login">Login</a>
+        </div>
+          
       </li>
     </ul>
   </div>
