correcting and fixing few issues

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,8 @@
-redirecting to google authentication....
+<div class="primary-color text-center p-3">
+    <img src="../../assets/img/logo-white.png" class="logo-img" alt="">
+  </div>
+  <div class="card">
+    <div class="card-body">
+       Redirecting to google Authentication ...
+    </div>
+  </div>
