--- a/src/app/process-login/process-login.component.html
+++ b/src/app/process-login/process-login.component.html
@@ -1,6 +1,8 @@
-<p>process-login works!</p>
-{{code}}
-{{state}}
-<a routerLink="/dashboard" class="waves-effect nav-link">
-    <i class="fas fa-tachometer-alt mr-1"></i>Dashboard
-  </a>
+<div class="primary-color text-center p-3">
+  <img src="../../assets/img/logo-white.png" class="logo-img" alt="">
+</div>
+<div class="card">
+  <div class="card-body">
+      Logging in .....
+  </div>
+</div>
