--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,58 +1,70 @@
-<div class="clearFix">
-  <h3 class="mb-2 mb-sm-0 pt-1 pb-2 "> DashBoard
-    <button class="btn btn-circle orange darken-4" (click)="refresh()">
-      <i class="fas fa-sync"></i>
-    </button> </h3>
+<app-nav></app-nav>
 
-</div>
+<div class="pt-2 mx-lg-1 pb-5 mb-4">
+  <div class="container-fluid mt-0">
+    <div class="clearFix">
+      <h3 class="mb-2 mb-sm-0 pt-1 pb-2 "> DashBoard
+        <button class="btn btn-circle orange darken-4" (click)="refresh()">
+          <i class="fas fa-sync"></i>
+        </button> </h3>
 
-<div class="row">
-  <div class="col-md-8">
-    <div class="card">
-      <div class="card-header stylish-color-dark white-text">
-        Invoice
+    </div>
+
+    <div class="row">
+      <div class="col-md-8">
+        <div class="card">
+          <div class="card-header stylish-color-dark white-text">
+            Invoice
+          </div>
+          <div class="card-body">
+            <div *ngIf="chart">
+              <canvas id="canvas">{{chart}}</canvas>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="card-body">
-        <div *ngIf="chart">
-          <canvas id="canvas">{{chart}}</canvas>
+
+
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-header stylish-color-dark white-text">
+            Welcome
+          </div>
+          <div class="card-body">
+            <table class="table table-borderless">
+              <tr>
+                <td style="width: 100px">
+                  <h5>Clients: </h5>
+                </td>
+                <td style="text-align: left">{{clientCount}}</td>
+              </tr>
+              <tr>
+                <td style="width: 100px">
+                  <h5>Vendors: </h5>
+                </td>
+                <td style="text-align: left">{{vendorCount}}</td>
+              </tr>
+            </table>
+            <H5>Vouchers</H5>
+            <table class="table table-borderless">
+              <thead class="brown lighten-5">
+                <td>Total</td>
+                <td>This Month</td>
+              </thead>
+              <tr>
+                <td>{{voucherTotalCount}}</td>
+                <td>{{voucherMonthCount}}</td>
+              </tr>
+            </table>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
-
-  <div class="col-md-4">
-    <div class="card">
-      <div class="card-header stylish-color-dark white-text">
-        Welcome
-      </div>
-      <div class="card-body">
-        <table class="table table-borderless">
-          <tr>
-            <td style="width: 100px">
-              <h5>Clients: </h5>
-            </td>
-            <td style="text-align: left">{{clientCount}}</td>
-          </tr>
-          <tr>
-            <td style="width: 100px">
-              <h5>Vendors: </h5>
-            </td>
-            <td style="text-align: left">{{vendorCount}}</td>
-          </tr>
-        </table>
-        <H5>Vouchers</H5>
-        <table class="table table-borderless">
-          <thead class="brown lighten-5">
-            <td>Total</td>
-            <td>This Month</td>
-          </thead>
-          <tr>
-            <td>{{voucherTotalCount}}</td>
-            <td>{{voucherMonthCount}}</td>
-          </tr>
-        </table>
-      </div>
-    </div>
-  </div>
+</div>
+<div class="companyMenu fixed-bottom clearfix">
+  <div class="company-name">Welcome : {{companyGlobalVar.companyName}} </div>
+  <a routerLink="/company" routerLinkActive="active" title="edit profile" class="company-icon">
+    <i class="fa fa-cog"></i>
+  </a>
 </div>
