--- a/src/app/gen-invoice/gen-invoice.component.html
+++ b/src/app/gen-invoice/gen-invoice.component.html
@@ -1,126 +1,143 @@
-<h3 class="mb-2 mb-sm-0 pt-1 pb-2">
-          <span>Invoice Details</span>
-</h3>
-<!-- Heading -->
-<div class="alert alert-danger" role="alert" *ngIf="error">
-  {{errorMessage}}
-</div>
-<div class="alert alert-success" role="alert" *ngIf="success">
-  {{successMessage}}
-</div>
+<app-nav></app-nav>
 
-<div class="card mb-3 wow fadeIn">
-  <div class="card-body">
-    <table width="100%">
-      <thead>
-        <tr>
-          <th>PerformA Id</th>
-          <th>Invoice Id</th>
-          <th>Invoice Date</th>
-          <!--<th>Print</th>-->
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>{{invoice.performaId}}</td>
-          <td>{{invoice.invoiceId}}</td>
-          <td><!--<input type="date" class="form-control underlined" name="invoiceDate" id="invoiceDate" required="true" [ngModel]="invoice.invoiceDate | date:'yyyy-MM-dd'"
+<div class="pt-2 mx-lg-1 pb-5 mb-4">
+  <div class="container-fluid mt-0">
+    <h3 class="mb-2 mb-sm-0 pt-1 pb-2">
+      <span>Invoice Details</span>
+    </h3>
+    <!-- Heading -->
+    <div class="alert alert-danger" role="alert" *ngIf="error">
+      {{errorMessage}}
+    </div>
+    <div class="alert alert-success" role="alert" *ngIf="success">
+      {{successMessage}}
+    </div>
+
+    <div class="card mb-3 wow fadeIn">
+      <div class="card-body">
+        <table width="100%">
+          <thead>
+            <tr>
+              <th>PerformA Id</th>
+              <th>Invoice Id</th>
+              <th>Invoice Date</th>
+              <!--<th>Print</th>-->
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>{{invoice.performaId}}</td>
+              <td>{{invoice.invoiceId}}</td>
+              <td>
+                <!--<input type="date" class="form-control underlined" name="invoiceDate" id="invoiceDate" required="true" [ngModel]="invoice.invoiceDate | date:'yyyy-MM-dd'"
               (ngModelChange)="invoice.invoiceDate = $event" [value]="date | date:'yyyy-MM-dd'"  [disabled]="invoice.type==='INVOICE'" />-->
-               <input type="date" class="form-control underlined" name="invoiceDate" id="invoiceDate" required="true" [ngModel]="invoice.invoiceDate | date:'yyyy-MM-dd'"
-              (ngModelChange)="invoice.invoiceDate = $event" [value]="date | date:'yyyy-MM-dd'" [max]="curDate" />
-          </td>
-          <!--<td>
+                <input type="date" class="form-control underlined" name="invoiceDate" id="invoiceDate" required="true"
+                  [ngModel]="invoice.invoiceDate | date:'yyyy-MM-dd'" (ngModelChange)="invoice.invoiceDate = $event"
+                  [value]="date | date:'yyyy-MM-dd'" [max]="curDate" />
+              </td>
+              <!--<td>
             <a target="_blank" style="color:white;background-color:#432fb5" class="btn" [href]="invoice.url">
                   <i class="fa fa-print"></i>
              </a>
           </td>-->
-        </tr>
-      </tbody>
-    </table>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <br />
+    <div class="card mb-3 wow fadeIn">
+      <div class="card-body">
+        <table width="100%" border="1" style="border-collapse:collapse;border:#f2f2f2 solid 1px;">
+          <thead>
+            <tr>
+              <th>Client Name</th>
+              <th colspan="3">Address</th>
+              <th>GSTIN</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr valign="top">
+              <td>{{client.name}}</td>
+              <td colspan="3">{{client.addrLine1}},
+                {{client.addrLine2}},<br />
+                {{client.city}}, {{client.state}}<br />
+                {{client.pincode}}<br />
+                {{client.phonePrimary}},{{client.email}}
+              </td>
+              <td>{{client.gstin}}</td>
+            </tr>
+            <tr valign="top">
+              <th colspan="5">Particulars</th>
+            </tr>
+            <tr valign="top">
+              <th colspan="2" *ngIf="invoice.sacCode!=''">Description</th>
+              <th colspan="3" *ngIf="invoice.sacCode==''">Description</th>
+              <th *ngIf="invoice.sacCode!=''">Sac Code</th>
+              <th>Rate</th>
+              <th>Amount</th>
+            </tr>
+            <tr valign="top" *ngFor="let field of particulars;let i=index">
+              <td colspan="2" *ngIf="invoice.sacCode!=''">{{field.itemDescription}}</td>
+              <td colspan="3" *ngIf="invoice.sacCode==''">{{field.itemDescription}}</td>
+              <td *ngIf="invoice.sacCode!=''">{{invoice.sacCode}}</td>
+
+              <td align="right"><input [disabled]="invoice.type==='INVOICE'" class="form-control" style="width:100px;"
+                  (change)="calculateAmount(field)" type="number" [(ngModel)]="field.invoiceRate" /></td>
+              <td align="right">{{field.calculatedInvoiceAmount}}</td>
+            </tr>
+            <tr>
+              <td colspan="4" align="right"><b>Sum</b></td>
+              <td align="right">{{invoice.totalInvoiceBeforeTax}}</td>
+            </tr>
+            <tr *ngIf="invoice.cgstInvoicePercent!=0">
+              <td colspan="3" align="right">
+                CGST
+              </td>
+              <td align="right">{{invoice.cgstInvoicePercent}}</td>
+              <td align="right">{{invoice.cgstInvoice}}</td>
+            </tr>
+            <tr *ngIf="invoice.sgstInvoicePercent!=0">
+              <td colspan="3" align="right">
+                SGST
+              </td>
+              <td align="right">{{invoice.sgstInvoicePercent}}</td>
+              <td align="right">{{invoice.sgstInvoice}}</td>
+            </tr>
+            <tr *ngIf="invoice.igstInvoicePercent!=0">
+              <td colspan="3" align="right">
+                IGST
+              </td>
+              <td align="right">{{invoice.igstInvoicePercent}}</td>
+              <td align="right">{{invoice.igstInvoice}}</td>
+            </tr>
+            <tr>
+              <td colspan="4" align="right"><b>Reimbursement</b></td>
+              <td align="right"><b>{{invoice.reimbInvoiceAmount}}</b></td>
+            </tr>
+            <tr>
+              <td colspan="4" align="right"><b>Total</b></td>
+              <td align="right"><b>{{invoice.totalInvoiceAmount}}</b></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="card mb-3 wow fadeIn">
+      <div class="card-body">
+        <a target="_blank" style="color:white;background-color:#432fb5" class="btn float-right" [href]="invoice.url"
+          *ngIf="invoice.url">
+          <i class="fa fa-print"></i>
+        </a>&nbsp;
+        <button class="btn btn-primary float-right" [disabled]="invoice.type==='INVOICE'" (click)="generateInvoice()"><i
+            class="fa fa-cogs">&nbsp;</i>Generate Invoice</button>
+      </div>
+    </div>
   </div>
 </div>
-<br/>
-<div class="card mb-3 wow fadeIn">
-  <div class="card-body">
-    <table width="100%" border="1" style="border-collapse:collapse;border:#f2f2f2 solid 1px;">
-      <thead>
-        <tr>
-          <th>Client Name</th>
-          <th colspan="3">Address</th>
-          <th>GSTIN</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr valign="top" >
-          <td>{{client.name}}</td>
-          <td colspan="3">{{client.addrLine1}},
-            {{client.addrLine2}},<br/>
-            {{client.city}}, {{client.state}}<br/>
-            {{client.pincode}}<br/>
-            {{client.phonePrimary}},{{client.email}}
-            </td>
-          <td>{{client.gstin}}</td>
-        </tr>
-        <tr valign="top">
-         <th colspan="5">Particulars</th>
-        </tr>
-        <tr valign="top">
-         <th colspan="2" *ngIf="invoice.sacCode!=''">Description</th>
-         <th colspan="3" *ngIf="invoice.sacCode==''">Description</th>
-         <th *ngIf="invoice.sacCode!=''">Sac Code</th>
-         <th>Rate</th>
-         <th>Amount</th>
-        </tr>
-        <tr valign="top" *ngFor="let field of particulars;let i=index">
-         <td  colspan="2"  *ngIf="invoice.sacCode!=''" >{{field.itemDescription}}</td>
-          <td  colspan="3"  *ngIf="invoice.sacCode==''" >{{field.itemDescription}}</td>
-         <td *ngIf="invoice.sacCode!=''" >{{invoice.sacCode}}</td>
-        
-         <td  align="right"><input [disabled]="invoice.type==='INVOICE'" class="form-control" style="width:100px;" (change)="calculateAmount(field)" type="number" [(ngModel)]="field.invoiceRate"/></td>
-         <td  align="right">{{field.calculatedInvoiceAmount}}</td>
-        </tr>
-        <tr>
-          <td colspan="4" align="right"><b>Sum</b></td>
-          <td align="right">{{invoice.totalInvoiceBeforeTax}}</td>
-        </tr>
-        <tr *ngIf="invoice.cgstInvoicePercent!=0">
-          <td colspan="3" align="right">
-            CGST
-          </td>
-          <td  align="right">{{invoice.cgstInvoicePercent}}</td>
-          <td  align="right">{{invoice.cgstInvoice}}</td>
-        </tr>
-         <tr *ngIf="invoice.sgstInvoicePercent!=0">
-          <td colspan="3" align="right">
-            SGST
-          </td>
-          <td align="right">{{invoice.sgstInvoicePercent}}</td>
-          <td  align="right">{{invoice.sgstInvoice}}</td>
-        </tr>
-         <tr *ngIf="invoice.igstInvoicePercent!=0">
-          <td colspan="3" align="right">
-            IGST
-          </td>
-          <td  align="right">{{invoice.igstInvoicePercent}}</td>
-          <td  align="right">{{invoice.igstInvoice}}</td>
-        </tr>
-        <tr>
-          <td colspan="4" align="right"><b>Reimbursement</b></td>
-          <td align="right"><b>{{invoice.reimbInvoiceAmount}}</b></td>
-        </tr>
-         <tr>
-          <td colspan="4" align="right"><b>Total</b></td>
-          <td align="right"><b>{{invoice.totalInvoiceAmount}}</b></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
-<div class="card mb-3 wow fadeIn">
-  <div class="card-body">
-    <a target="_blank" style="color:white;background-color:#432fb5" class="btn float-right" [href]="invoice.url" *ngIf="invoice.url">
-            <i class="fa fa-print"></i>
-      </a>&nbsp;
-    <button class="btn btn-primary float-right" [disabled]="invoice.type==='INVOICE'" (click)="generateInvoice()"><i class="fa fa-cogs">&nbsp;</i>Generate Invoice</button>
-  </div>
+<div class="companyMenu fixed-bottom clearfix">
+  <div class="company-name">Welcome : {{companyGlobalVar.companyName}} </div>
+  <a routerLink="/company" routerLinkActive="active" title="edit profile" class="company-icon">
+    <i class="fa fa-cog"></i>
+  </a>
 </div>
