--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark pl-3 primary-color">
 
   <!-- Navbar brand -->
-  <a class="navbar-brand waves-effect p-0 m-0 mr-1" href="#"><img src="/img/logo-white.png" class="img-fluid logo-img" alt=""></a>
+  <a class="navbar-brand waves-effect p-0 m-0 mr-1" href="#"><img src="../../assets/img/logo-white.png" class="img-fluid logo-img" alt=""></a>
 
   <!-- Collapse button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -69,7 +69,9 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
           <div style="width:15em">
-          <app-header></app-header>
+          
+             <app-header></app-header>
+
         </div>
         </div>
       </li>
@@ -79,10 +81,10 @@
           <i class="fas fa-random"></i>
         </a>
           <div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-1">
-              <a class="dropdown-item waves-effect waves-light" href="/">Switch Company?</a>
+              <a class="dropdown-item waves-effect waves-light" routerLink="/">Switch Company?</a>
           </div>
           <div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-1">
-            <a class="dropdown-item waves-effect waves-light" href="/login">Login</a>
+            <a class="dropdown-item waves-effect waves-light" routerLink="/login">Login</a>
         </div>
           
       </li>
