--- a/src/app/gen-invoice/gen-invoice.component.html
+++ b/src/app/gen-invoice/gen-invoice.component.html
@@ -137,7 +137,7 @@
 </div>
 <div class="companyMenu fixed-bottom clearfix">
   <div class="company-name">Welcome : {{companyGlobalVar.companyName}} </div>
-  <a routerLink="/company" routerLinkActive="active" title="edit profile" class="company-icon">
+  <a routerLink="/company/selected" routerLinkActive="active" title="edit profile" class="company-icon">
     <i class="fa fa-cog"></i>
   </a>
 </div>
