--- a/src/app/nav/nav.component.sidebar.html
+++ b/src/app/nav/nav.component.sidebar.html
@@ -49,7 +49,7 @@
   <hr />
   <div class="companyMenu fixed-bottom">
     <span class="company-name">Welcome : {{companyGlobalVar.companyName}} </span>
-    <a routerLink="/company" routerLinkActive="active" title="edit profile" class="company-icon">
+    <a routerLink="/company/selected" routerLinkActive="active" title="edit profile" class="company-icon">
       <i class="fa fa-cog"></i>
     </a>
   </div>
