--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,33 +7,35 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <b>Welcome :</b> <br/>
-                        <button class="btn btn-primary">Create Company</button><br/>
+                        <b>Welcome :</b> <br />
+                        <a routerLink="/new-company/new" class="btn btn-primary">Create Company</a><br />
                         <button class="btn btn-success">Admin Screen</button>
                     </div>
-                 </div>
-                
+                </div>
             </div>
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-body">
-                        <b>Which company you want to access</b> 
+                        <b>Which company you want to access</b>
                         <div class="list-group">
-                            <a 	class="list-group-item list-group-item-action flex-column align-items-start">
-							<div class="d-flex w-100 justify-content-between">
-								<h5 class="mb-2 h5"  >List group item heading</h5>
-								<small class="comp-active" >Active/Inactive</small>
-							</div>
-							<p class="mb-2">
-							You are going to access as : 
-							<span >
-								role,
-							</span>
-							</p>
-						</a>
+                            <a *ngFor="let c of companyRole;let i=index"
+                                class="list-group-item list-group-item-action flex-column align-items-start"
+                                (click)="selectedCompany(c)">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <h5 class="mb-2 h5">{{c.companyName}}</h5>
+                                    <small class="comp-active" *ngIf="c.active">Active</small>
+                                    <small class="comp-inActive" *ngIf="!c.active">InActive</small>
+                                </div>
+                                <p class="mb-2">
+                                    You are going to access as :
+                                    <span>
+                                        {{c.roleCode}}
+                                    </span>
+                                </p>
+                            </a>
                         </div>
                     </div>
-                 </div>
+                </div>
             </div>
         </div>
     </div>
