--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
                 <div class="card">
                     <div class="card-body">
                         <b>Welcome :</b> <br />
-                        <a routerLink="/new-company/new" class="btn btn-primary">Create Company</a><br />
+                        <a routerLink="/new-company" class="btn btn-primary">Create Company</a><br />
                         <button class="btn btn-success">Admin Screen</button>
                     </div>
                 </div>
